--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "ReCheck B.V. <info@recheck.io>",
   "license": "MIT",
   "scripts": {
+    "pretest": "ts-node --transpile-only --ignore=false test/pretest.ts",
+    "test": "ts-node --transpile-only --ignore=false test/test.ts",
     "format": "prettier --write 'src/**/*.{ts,js}'"
   },
   "dependencies": {
@@ -21,7 +23,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.1",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": "^12 || ^14 || ^16 || ^18"
