--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write 'src/**/*.{ts,js}'"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.19.2",
-    "@dfinity/candid": "^0.19.2",
-    "azle": "^0.18.6",
-    "uuid": "^9.0.0"
+    "@dfinity/agent": "^2.1.3",
+    "@dfinity/candid": "^2.1.3",
+    "azle": "^0.24.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
@@ -28,6 +28,6 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": "^12 || ^14 || ^16 || ^18"
+    "node": "^18 || ^20"
   }
 }
