--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,9 @@
   "compilerOptions": {
     "strict": true,
     "target": "ES2020",
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
+    "module": "ES2020",
     "moduleResolution": "node",
     "allowJs": true,
-    "outDir": "HACK_BECAUSE_OF_ALLOW_JS",
-    "allowSyntheticDefaultImports": true
+    "outDir": "HACK_BECAUSE_OF_ALLOW_JS"
   }
 }
